--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,25 +1,41 @@
-cmake_minimum_required(VERSION 3.0.2)
+cmake_minimum_required(VERSION 3.5)
+
 project(ethercat_grant)
 
-## Find catkin macros and libraries
-## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
-## is used, also find other catkin packages
-find_package(catkin REQUIRED COMPONENTS
-  roscpp
-)
 
-catkin_package(
-#  INCLUDE_DIRS include
-#  LIBRARIES ethercat_grant
-#  CATKIN_DEPENDS roscpp
-#  DEPENDS system_lib
-)
-include_directories(
-  ${catkin_INCLUDE_DIRS}
-)
+
+if(NOT CMAKE_CXX_STANDARD)
+
+  set(CMAKE_CXX_STANDARD 14)
+
+endif()
+
+if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+
+  add_compile_options(-Wall -Wextra -Wpedantic)
+
+endif()
+
+
+
+find_package(ament_cmake REQUIRED)
+
+find_package(rclcpp REQUIRED)
+
+find_library(libcap REQUIRED)
+
+
+
+include_directories(include)
+
 add_executable(ethercat_grant src/ethercat_grant.cpp)
-target_link_libraries(ethercat_grant cap)
+
+target_link_libraries(ethercat_grant cap )
+
+
 
 install(TARGETS ethercat_grant
-   RUNTIME DESTINATION ${CATKIN_GLOBAL_BIN_DESTINATION}
-)
+
+   DESTINATION bin/${PROJECT_NAME})
+
+ament_package()
