--- a/package.xml
+++ b/package.xml
@@ -11,11 +11,19 @@
 
   <author email="software@shadowrobot.com">Ugo Cupcic</author>
 
-  <buildtool_depend>catkin</buildtool_depend>
+  <!-- <buildtool_depend>catkin</buildtool_depend> -->
+  <buildtool_depend>ament_cmake</buildtool_depend>
+
 
   <build_depend>libcap-dev</build_depend>
-  <build_depend>roscpp</build_depend>
+  <build_depend>rclcpp</build_depend>
 
   <exec_depend>libcap-dev</exec_depend>
-  <exec_depend>roscpp</exec_depend>
+  <exec_depend>rclcpp</exec_depend>
+
+
+  <export>
+  <build_type>ament_cmake</build_type>
+  </export>
+
 </package>
